Fixed passage tag spacing problems. Switched to using a simpler passage tag representation with :before and fixed classes.
M    backend/book.py:
	New tag representation.

AM   generate_passage_tag_css.py:
	Standalone util to generate the tag CSS.

AM   css/passage_tag.css:
M    css/bpbible_html.css:
	Styling for the new passage tag representation.
	Also fix the tag spacing indentation issue with text-index: 0.

M    protocol_handlers.py:
	Include the new CSS file.


git-svn-id: https://bpbible.googlecode.com/svn/trunk@1173 20523bf7-2b47-0410-960a-a116b6c96ec9

--- a/css/bpbible_html.css
+++ b/css/bpbible_html.css
@@ -415,18 +415,30 @@ a.passage_tag {
 	text-decoration: none;
 	color: black;
 	font: 9pt arial;
+	padding: 0;
 }
 
-a.passage_tag > div, a.passage_tag > div > div {
-	border-width: 1px;
-	border-style: solid;
-	margin: 0;
+a.passage_tag {
+	position: relative;
+	z-index: 1;
+	padding: 1px;
 	display: inline-block;
-	white-space: nowrap;
+	margin-left: 2px;
+	margin-right: 3px;
+	text-indent: 0;
 }
 
-a.passage_tag > div > div > div {
+a.passage_tag:before {
+	content: "";
+	display: block;
+	position: absolute;
+	z-index: -1;
+	top: 0;
+	left: 0;
+	right: 0; 
+	bottom: 0;
+}
+
+a.passage_tag div {
 	padding: 0 2px;
-	margin: 0;
-	display: inline-block;
 }
